cmake_minimum_required(VERSION 3.0.0)
project(houjiec VERSION 0.1.0)
add_compile_options(-std=c++11)
link_libraries(pthread)
add_executable(09offer 09offer.cpp)
add_executable(30offer 30offer.cpp)
add_executable(06offer 06offer.cpp)
# add_executable(35offer 35offer.cpp)
add_executable(1115offer 1115offer.cpp)
add_executable(1116offer 1116offer.cpp)
add_executable(1117offer 1117offer.cpp)
add_executable(1195offer 1195offer.cpp)
